...
                                  Column(
                                    crossAxisAlignment:
                                        CrossAxisAlignment.start,
                                    children: [
                                      const SizedBox(height: 8),
                                      TextFormField(
                                        key: const Key('Email'),
                                        controller: value.emailController,
                                        decoration: InputDecoration(
                                          labelText: 'Email',
                                          labelStyle: const TextStyle(
                                              color: Colors
                                                  .white), // Warna teks label
...
                                  Column(
                                    crossAxisAlignment:
                                        CrossAxisAlignment.start,
                                    children: [
                                      const SizedBox(height: 8),
                                      TextFormField(
                                        key: const Key('Kata Sandi'),
                                        controller: value.passwordController,
                                        obscureText: value
                                            .isObscure, // Menyembunyikan input password
                                        decoration: InputDecoration(
                                          labelText: 'Kata Sandi',
                                          labelStyle: const TextStyle(
...
                                  ),
                                  const SizedBox(height: 16),

                                  // Section: Sign Up Button
                                  SizedBox(
                                    width: double.infinity,
                                    key: const Key('loginButton'),
                                    height: 56,
                                    child: ElevatedButton(
                                      onPressed: () {
                                        if (value.keyfrom.currentState!
                                            .validate()) {
                                          value.setLoading(true);
...
