...

  @override
  Widget build(BuildContext context) {
    return MaterialApp(
      debugShowCheckedModeBanner: false,
      home: PersistentTabView(
        key: const Key('menu'),
        controller: _controller,
        backgroundColor: Colors.white,
        tabs: [
          PersistentTabConfig(
            screen: HomePage(
              key: const Key('menu'),
...
