...
                                          ImageAssets.logo,
                                          height: 192,
                                          width: 192,
                                        ),
                                        const SizedBox(height: 16),
                                        const Text(
                                          'Daftar Akun',
                                          style: TextStyle(
                                              fontSize: 20,
                                              fontWeight: FontWeight.bold,
                                              color: Colors.white),
                                        ),
                                        const SizedBox(height: 8),
...
                                  Column(
                                    crossAxisAlignment:
                                        CrossAxisAlignment.start,
                                    children: [
                                      const SizedBox(height: 8),
                                      TextFormField(
                                        key: const Key('Nama'),
                                        controller: value.nameController,
                                        decoration: InputDecoration(
                                          labelText: 'Nama',
                                          labelStyle: const TextStyle(
                                              color: Colors
                                                  .white), // Warna teks label
...
                                  Column(
                                    crossAxisAlignment:
                                        CrossAxisAlignment.start,
                                    children: [
                                      const SizedBox(height: 8),
                                      TextFormField(
                                        key: const Key('Email'),
                                        controller: value.emailController,
                                        decoration: InputDecoration(
                                          labelText: 'Email',
                                          labelStyle: const TextStyle(
                                              color: Colors
                                                  .white), // Warna teks label
...
                                  Column(
                                    crossAxisAlignment:
                                        CrossAxisAlignment.start,
                                    children: [
                                      const SizedBox(height: 8),
                                      TextFormField(
                                        key: const Key('Nomor Hp'),
                                        controller: value.phoneController,
                                        decoration: InputDecoration(
                                          labelText: 'Nomor Hp',
                                          prefix: const Text(
                                            '+62 ',
                                            style:
...
                                  Column(
                                    crossAxisAlignment:
                                        CrossAxisAlignment.start,
                                    children: [
                                      const SizedBox(height: 8),
                                      TextFormField(
                                        key: const Key('Alamat'),
                                        controller: value.addressController,
                                        decoration: InputDecoration(
                                          labelText: 'Alamat',
                                          labelStyle: const TextStyle(
                                              color: Colors
                                                  .white), // Warna teks label
...
                                  Column(
                                    crossAxisAlignment:
                                        CrossAxisAlignment.start,
                                    children: [
                                      const SizedBox(height: 8),
                                      TextFormField(
                                        key: const Key('Kata Sandi'),
                                        controller: value.passwordController,
                                        obscureText: value
                                            .isObscure, // Menyembunyikan input password
                                        decoration: InputDecoration(
                                          labelText: 'Kata Sandi',
                                          labelStyle: const TextStyle(
...

                                  // Section: Sign Up Button
                                  SizedBox(
                                    width: double.infinity,
                                    height: 56,
                                    child: ElevatedButton(
                                      key: const Key('registerButton'),
                                      onPressed: () async {
                                        value.setLoading(true);
                                        //kalo testpake ini
                                        SharedPreferences prefs =
                                            await SharedPreferences
                                                .getInstance();
...
